fixes positioning of labels on mobile validate

--- a/public/javascripts/SVValidate/mobile/mobileValidate.css
+++ b/public/javascripts/SVValidate/mobile/mobileValidate.css
@@ -228,6 +228,12 @@ html {
     width: 700px;
 }
 
+#view-control-layer-mobile {
+    position: absolute;
+    top: 0;
+    pointer-events: none; /* For now, just letting the SV viewer handle panning on it's own. */
+}
+
 #validation-yes-button {
     background-color: #78C8AB;
     color: #2C293E;
